we can create a users and there is a profile

--- a/views/login.erb
+++ b/views/login.erb
@@ -36,11 +36,11 @@
     <form action="login/submit" method="POST">
      <div class="form-group">
        <label for="email">Email address:</label>
-       <input type="email" name="user[email]" class="form-control" id="user[email]">
+       <input type="email" name="email" class="form-control" id="user[email]">
      </div>
      <div class="form-group">
        <label for="pwd">Password:</label>
-       <input type="password" name="user[password]" class="form-control" id="pwd">
+       <input type="password" name="password" class="form-control" id="pwd">
      </div>
      <div class="checkbox">
        <label><input type="checkbox"> Remember me</label>
@@ -55,5 +55,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+
+
   </body>
 </html>
