--- a/views/home.erb
+++ b/views/home.erb
@@ -17,6 +17,13 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+     <style>
+      body {
+        /*padding-top: 60px;*/
+        background-color: skyblue;
+      }
+    </style>
+
 
   </head>
   <body>
@@ -77,5 +84,7 @@
 
 <!--Bootstrap jQuery Plugins, compiled and minified -->
 <script src="/js/bootstrap.min.js"></script>
+
+
 </body>
 </html>
