--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,6 +1,34 @@
+<!DOCTYPE HTML>
 <html>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>nanoTwitter Home</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+     <style>
+      body {
+        /*padding-top: 60px;*/
+        background-color: skyblue;
+      }
+    </style>
+
+
+  </head>
+  <body>
   <!--this header goes on almost every page -->
+  
   <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -47,5 +75,30 @@
   </div><!-- /.container-fluid -->
 </nav>
 <!-- End sitewide header-->
+
+<!-- Begin page-->
+
+
+<!-- jQuery via Google + local fallback -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/jquery-1.7.1.min.js"><\/script>')</script>
+
+<!--Bootstrap jQuery Plugins, compiled and minified -->
+<script src="/js/bootstrap.min.js"></script>
+
+
+
+<h1> Hey <%= @name %> </h1>
+
+    <h3> User Info: </h3>
+    <ul> 
+    <li> Username: <%= @username%></li>
+    <li> Email: <%= @email%> </li>
+    <li> Followers: <%= @followes%> </li>
+    <li> Followers: <%=@followings%> </li>
+    <li> Number of tweets: <%=@tweets%> </li>
+    </ul>
+
+
 </body>
 </html>
