--- a/views/registration.erb
+++ b/views/registration.erb
@@ -35,19 +35,19 @@
     <form action="registration/submit" method="POST">
       <div class="form-group">
         <label for="name"> Your Real Name: </label>
-        <input type="text" name="user[name]" class="form-control" id="name">
+        <input type="text" name="name" class="form-control" id="name">
       </div>
      <div class="form-group">
        <label for="email">Email address:</label>
-       <input type="email" name="user[email]" class="form-control" id="user[email]">
+       <input type="email" name="email" class="form-control" id="user[email]">
      </div>
      <div class="form-group">
        <label for="username"> Username: </label>
-       <input type="text" name="user[user_name]" class="form-control" id="username">
+       <input type="text" name="username" class="form-control" id="username">
      </div>
      <div class="form-group">
        <label for="pwd">Password:</label>
-       <input type="password" name="user[password]" class="form-control" id="pwd">
+       <input type="password" name="password" class="form-control" id="pwd">
      </div>
      <div class="form-group">
        <label for="confirm_pwd"> Confirm password:</label>
