--- a/views/home.erb
+++ b/views/home.erb
@@ -9,7 +9,7 @@
     <title>nanoTwitter Home</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,6 +28,8 @@
   </head>
   <body>
     <%= erb :navbar %>
+
+
 
 <!-- Begin page-->
 
