--- a/views/home.erb
+++ b/views/home.erb
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    
+
     <title>nanoTwitter Home</title>
 
     <!-- Bootstrap -->
@@ -27,8 +29,11 @@
 
   </head>
   <body>
-    <%= erb :navbar %>
-
+  <% if @current_user %>
+     <%= erb :navbar %>
+  <% else %>
+     <h2> Error loading </h2>
+  <%end %>
 <!-- Begin page-->
 
 
