--- a/views/profile.erb
+++ b/views/profile.erb
@@ -45,6 +45,7 @@
           </div>
           </div>
           </div>
+          <a href="/">home</a>
         </div>
       </div>
 <!-- Begin page-->
