--- a/views/navbar.erb
+++ b/views/navbar.erb
@@ -38,7 +38,13 @@
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
     <form class="nav navbar-form navbar-right">
-      <a class="btn btn-primary" href="/login">Tweet</a>
+      <%if authenticate!%>
+        <a class="btn btn-primary" href="/submit">Roar</a>
+        <a class="btn btn-primary" href="/logout">Logout</a>
+        <%else%>
+      <a class="btn btn-primary" href="/login">Login</a>
+      <%end%>
+
     </form>
   </div><!-- /.navbar-collapse -->
 </div><!-- /.container-fluid -->
