fixed login and registration issues, database now maintains uniqueness of entries.

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -36,10 +36,10 @@
           <h1> Hey <%= @user[:name] %> </h1>
               <h3> User Info: </h3>
               <ul>
-              <li> Username: <%= @user[:username]%></li>
+              <li> Username: <%= @user[:user_name]%></li>
               <li> Email: <%= @user[:email]%> </li>
               <li> Followers: <%= @user[:follows]%> </li>
-              <li> Followers: <%=@user[:followings]%> </li>
+              <li> Follows: <%=@user[:followings]%> </li>
               <li> Number of tweets: <%=@user[:tweets]%> </li>
             </ul>
           </div>
