--- a/views/home.erb
+++ b/views/home.erb
@@ -35,7 +35,7 @@
 
 <!-- Begin page-->
 
-
+<h1> Codeship Autodeploy Test</h1>
 <!-- jQuery via Google + local fallback -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery-1.7.1.min.js"><\/script>')</script>
