--- a/views/navbar.erb
+++ b/views/navbar.erb
@@ -37,9 +37,9 @@
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
-    <form class="nav navbar-form navbar-right">
+    <form class="nav navbar-form navbar-right" method=>
       <%if authenticate!%>
-        <a class="btn btn-primary" href="/submit">Roar</a>
+        <a class="btn btn-primary" href="/tweet/new">Roar</a>
         <a class="btn btn-primary" href="/logout">Logout</a>
         <%else%>
       <a class="btn btn-primary" href="/login">Login</a>
