--- a/views/profile.erb
+++ b/views/profile.erb
@@ -48,6 +48,9 @@
           <a href="/">home</a>
         </div>
       </div>
+      <form action="/tweet/new/submit" method="POST">
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
 <!-- Begin page-->
 <!-- jQuery via Google + local fallback -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
