--- a/views/my_home.erb
+++ b/views/my_home.erb
@@ -55,7 +55,7 @@
         <form action="/tweet/new/submit" method="POST">
         <div class="form-group">
              <label for="RoarInput">Roar!</label>
-             <textarea type=text class="form-control" name= "roar_text" id="Roar_input" rows="3"></textarea>
+             <textarea type=text class="form-control" name= "tweet_text" id="Tweet_input" rows="3"></textarea>
         </div>
           <button type="submit" class="btn btn-default">Submit</button>
       </form>
