--- a/views/login.erb
+++ b/views/login.erb
@@ -42,14 +42,22 @@
        <label for="pwd">Password:</label>
        <input type="password" name="password" class="form-control" id="pwd">
      </div>
+     <!--This currently doesn't do anything, so I commented it out
      <div class="checkbox">
        <label><input type="checkbox"> Remember me</label>
-     </div>
+     </div>-->
       <!-- <input type="submit" value="submit"/>-->
-     <button type="submit" class="btn btn-default">Submit</button>
+      <div class="col-md-1 col-md-offset-4">
+        <button type="submit" class="btn btn-default">Submit</button>
+      </div>
     </form>
-    </div>
 
+    </div>
+    <div class="row" >
+      <div class= "col-md-6 col-md-offset-5" margin-top: 30px>
+          <a class="btn btn-primary" href="/registration" role="button">Create Account</a>
+      </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
