--- a/views/my_home.erb
+++ b/views/my_home.erb
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML>
+<% max_displayed = 20 %>
+
 <html>
 <html lang="en">
   <head>
@@ -59,9 +61,25 @@
         </div>
           <button type="submit" class="btn btn-default">Submit</button>
       </form>
-    </div>
-
-
+      Your Tweets
+      <br>
+      <% len = @tweets.length %>
+      <% for i in 0 .. max_displayed %>
+        <%if i < len %>
+          <div class="panel panel-default">
+            <div class="panel panel-heading">
+              @<%=@tweets[len - i - 1].author_name%> tweeted:
+            </div>
+            <div class ="panel panel-body">
+              <%= @tweets[len - i - 1].text%>
+            </div>
+          </div>
+          <br>
+          <%else%>
+            <%break%>
+          <%end%>
+        <%end%>
+      </div>
     </div>
   </div>
   <script scr="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
