more database unit tests, added functions to user and tweet classes

--- a/views/my_home.erb
+++ b/views/my_home.erb
@@ -46,9 +46,9 @@
           <ul>
           <li> Username: <%= @user[:user_name]%></li>
           <li> Email: <%= @user[:email]%> </li>
-          <li> Followers: <%= @user[:follows]%> </li>
-          <li> Follows: <%=@user[:followings]%> </li>
-          <li> Number of tweets: <%=@user[:tweets]%> </li>
+          <li> Followers: <%= @user[:followers]%> </li>
+          <li> Follows: <%=@user[:following]%> </li>
+          <li> Number of tweets: <%=@user[:tweet_count]%> </li>
         </ul>
       </div>
       </div>
