--- a/views/registration.erb
+++ b/views/registration.erb
@@ -42,8 +42,8 @@
        <input type="email" name="email" class="form-control" id="user[email]">
      </div>
      <div class="form-group">
-       <label for="username"> Username: </label>
-       <input type="text" name="username" class="form-control" id="username">
+       <label for="user_name"> Username: </label>
+       <input type="text" name="user_name" class="form-control" id="user_name">
      </div>
      <div class="form-group">
        <label for="pwd">Password:</label>
