--- a/views/profile.erb
+++ b/views/profile.erb
@@ -51,9 +51,9 @@
               <ul>
               <li> Username:<div id="user_name"> <%= @user[:user_name]%></div></li>
               <li> Email: <%= @user[:email]%> </li>
-              <li> Followers: <%= @user[:follows]%> </li>
-              <li> Follows: <%=@user[:followings]%> </li>
-              <li> Number of tweets: <%=@user[:tweets]%> </li>
+              <li> Followers: <%= @user[:followers]%> </li>
+              <li> Follows: <%=@user[:following]%> </li>
+              <li> Number of tweets: <%=@user[:tweet_count]%> </li>
             </ul>
             <% if session[:user_id] #&& 3@user.id != session[:user_id]%>
               <%if @follow_status %>
@@ -69,6 +69,26 @@
             <%end%>
           </div>
           </div>
+          </div>
+          <div class= "col-md-6">
+             Your Tweets
+              <br>
+              <% len = @tweets.length %>
+              <% for i in 0 .. max_displayed %>
+                <%if i < len %>
+                  <div class="panel panel-default">
+                    <div class="panel panel-heading">
+                      @<%=@tweets[len - i - 1].author_name%> tweeted:
+                    </div>
+                    <div class ="panel panel-body">
+                      <%= @tweets[len - i - 1].text%>
+                    </div>
+                  </div>
+                  <br>
+                  <%else%>
+                    <%break%>
+                  <%end%>
+                <%end%>
           </div>
           <a href="/">home</a>
         </div>
