--- a/views/my_home.erb
+++ b/views/my_home.erb
@@ -68,7 +68,7 @@
         <%if i < len %>
           <div class="panel panel-default">
             <div class="panel panel-heading">
-              @<%=@tweets[len - i - 1].author_name%> tweeted:
+              <%=@tweets[len - i - 1].author_name%> tweeted:
             </div>
             <div class ="panel panel-body">
               <%= @tweets[len - i - 1].text%>
@@ -83,7 +83,7 @@
     </div>
   </div>
   <script scr="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/jquery-1.7.1.min.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="js/jquery-1.7.1.min.js"><\/script>')</script>
 
 <!--Bootstrap jQuery Plugins, compiled and minified -->
 <script src="/js/bootstrap.min.js"></script>
