--- a/views/profile.erb
+++ b/views/profile.erb
@@ -55,7 +55,7 @@
               <li> Follows: <%=@user[:followings]%> </li>
               <li> Number of tweets: <%=@user[:tweets]%> </li>
             </ul>
-            <% if session[:user_id] #&& 3@user.id != session[:user_id]%>
+            <% if session[:user_id] && @user.id != session[:user_id]%>
               <%if @follow_status %>
                 <form onsubmit="unfollowUser(this);" method="POST" name="unfollow-form">
                   <button type="submit" class="btn btn-default">Unfollow</button>
@@ -64,19 +64,16 @@
                 <form onsubmit="followUser(this);" method="POST" name="follow-form">
                   <button type="submit" class="btn btn-default">Follow</button>
                 </form>
-                <!--<a class="btn btn-primary" href="follow" method="POST"> cFollow</a>-->
               <% end %>
             <%end%>
           </div>
           </div>
           </div>
-          <a href="/">home</a>
         </div>
       </div>
       <form action="/tweet/new/submit" method="POST">
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <p id="demo"> Test paragraph </p>
 <!-- Begin page-->
 <!-- jQuery via Google + local fallback -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
