--- a/views/my_home.erb
+++ b/views/my_home.erb
@@ -46,8 +46,8 @@
           <ul>
           <li> Username: <%= @user[:user_name]%></li>
           <li> Email: <%= @user[:email]%> </li>
-          <li> Followers: <%= @user[:followers]%> </li>
-          <li> Follows: <%=@user[:following]%> </li>
+          <li> Followers: <%= @user[:follower_count]%> </li>
+          <li> Follows: <%=@user[:following_count]%> </li>
           <li> Number of tweets: <%=@user[:tweet_count]%> </li>
         </ul>
       </div>
@@ -63,21 +63,16 @@
       </form>
       Your Followers' Tweets:
       <br>
-      <% len = @tweets.length %>
-      <% for i in 0 .. max_displayed %>
-        <%if i < len %>
+      <% @tweets.each do |tweet| %>
           <div class="panel panel-default">
             <div class="panel panel-heading">
-              @<%=@tweets[len - i - 1].author_name%> tweeted:
+              <%=tweet.author_name%> tweeted at <%=tweet.created_at%> :
             </div>
             <div class ="panel panel-body">
-              <%= @tweets[len - i - 1].text%>
+              <%= tweet.text%>
             </div>
           </div>
           <br>
-          <%else%>
-            <%break%>
-          <%end%>
         <%end%>
       </div>
       <a href="/profile">profile</a>
