Wrote a followvalidator to prevent duplicate follows and illegal follows, completed follow unit tests, centered the tweet feed on the generic homepage, added a sign up button to the logged out navbar

--- a/views/navbar.erb
+++ b/views/navbar.erb
@@ -43,6 +43,8 @@
         <a class="btn btn-primary" href="/logout">Logout</a>
         <%else%>
       <a class="btn btn-primary" href="/login">Login</a>
+      or
+      <a class="btn btn-primary" href="/registration"> Create an Account</a>
       <%end%>
 
     </form>
