--- a/views/home.erb
+++ b/views/home.erb
@@ -36,7 +36,7 @@
 
   <div class="container">
    <div class="row" background-color>
-    <div class= "col-md-6">
+    <div class= "col-md-6 col-md-offset-3" >
             Random People's tweets:
             <br>
           <% @tweets.each do |tweet| %>
@@ -54,10 +54,6 @@
         </div>
       </div>
 
-
-<!-- Begin page-->
-
-<h1> Codeship Autodeploy Test</h1>
 <!-- jQuery via Google + local fallback -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery-1.7.1.min.js"><\/script>')</script>
