--- a/views/my_home.erb
+++ b/views/my_home.erb
@@ -61,16 +61,12 @@
         </div>
           <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      Your Followers' Tweets:
+      Tweets by People you Follow:
       <br>
       <% @tweets.each do |tweet| %>
           <div class="panel panel-default">
             <div class="panel panel-heading">
-<<<<<<< HEAD
-              <%=@tweets[len - i - 1].author_name%> tweeted:
-=======
               <%=tweet.author_name%> tweeted at <%=tweet.created_at%> :
->>>>>>> 8d6034c7906454c7947c74f2ea5fe594fafbd2d9
             </div>
             <div class ="panel panel-body">
               <%= tweet.text%>
@@ -79,7 +75,6 @@
           <br>
         <%end%>
       </div>
-      <a href="/profile">profile</a>
     </div>
   </div>
   <script scr="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
