--- a/views/login.erb
+++ b/views/login.erb
@@ -21,12 +21,30 @@
         padding-top: 60px;
         background-color: skyblue;
       }
+      h1 {
+        color: white;
+        padding-bottom: 30px;
+      }
+      button {
+        margin-top: 20px;
+        margin-bottom: 20px
+        margin-left: 20%;
+      }
+      a{
+        margin-top: 30px;
+        margin-left: 20%;
+      }
+      label{
+        margin-left: 35%;
+      }
+
+
     </style>
   </head>
   <body>
 
     <div class="row">
-      <div class= "col-md-6 col-md-offset-5"
+      <div class= "col-md-6 col-md-offset-3"
       <div class: "page-header">
         <h1> Login </h1>
       </div>
@@ -47,17 +65,19 @@
        <label><input type="checkbox"> Remember me</label>
      </div>-->
       <!-- <input type="submit" value="submit"/>-->
-      <div class="col-md-1 col-md-offset-4">
+      <div class="col-md-4 col-md-offset-4">
         <button type="submit" class="btn btn-default">Submit</button>
       </div>
     </form>
 
+    <div class= "col-md-4 col-md-offset-3">
+        <a class="btn btn-primary" href="/registration" role="button">Create Account</a>
     </div>
-    <div class="row" >
-      <div class= "col-md-6 col-md-offset-5" margin-top: 30px>
-          <a class="btn btn-primary" href="/registration" role="button">Create Account</a>
-      </div>
+
     </div>
+
+
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
