--- a/views/profile.erb
+++ b/views/profile.erb
@@ -66,7 +66,7 @@
           </div>
 
           <div class= "col-md-6">
-            Your Tweets
+            <%=@user[:user_name]%>'s Tweets
             <br>
           <% @tweets.each do |tweet| %>
               <div class="panel panel-default">
