--- a/views/navbar.erb
+++ b/views/navbar.erb
@@ -31,9 +31,10 @@
         </ul>
       </li>
     </ul>
-    <form class="navbar-form navbar-left">
+    <form class="navbar-form navbar-left" action="/search" method="POST">
+      
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Not Yet Implemented">
+        <input type="text" class="form-control" name="keyword" placeholder="search for tweets">
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
