--- a/views/navbar.erb
+++ b/views/navbar.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">ThunderBear</a>
+    <a class="navbar-brand" href="/front">ThunderBear</a>
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -31,8 +31,8 @@
         </ul>
       </li>
     </ul>
-    <form class="navbar-form navbar-left" action="/search" method="POST">
-      
+    <form class="navbar-form navbar-left" action="/search" method="GET">
+
       <div class="form-group">
         <input type="text" class="form-control" name="keyword" placeholder="search for tweets">
       </div>
