first bigpush in transition to Redis, schema modified to include the minimum tables, mostof our functionality now relies on Redis as opposed to the database, tags now implemented

--- a/views/home.erb
+++ b/views/home.erb
@@ -46,10 +46,10 @@
           <% @tweets.each do |tweet| %>
               <div class="panel panel-default">
                 <div class="panel panel-heading">
-                  <%=tweet.author_name%> tweeted at <%=tweet.created_at%> :
+                  <%=tweet["author_name"]%> tweeted at <%=tweet["created_at"]%> :
                 </div>
                 <div class ="panel panel-body">
-                  <%= tweet.text%>
+                  <%= tweet["text"]%>
                 </div>
               </div>
               <br>
