--- a/views/follow_button.erb
+++ b/views/follow_button.erb
@@ -1,13 +1,8 @@
 <% if session[:user_id] && @user.id != session[:user_id]%>
       <%if @follow_status %>
-            <form onsubmit="unfollowUser(this);" method="POST" name="unfollow-form">
-                  <button type="submit" class="btn btn-default">Unfollow</button>
-            </form>
-      <%else%>
-            <form onsubmit="followUser(this);" method="POST" name="follow-form">
-                <button type="submit" class="btn btn-default">Follow</button>
-            </form>
-                
-     <% end %>
-
-<%end%>
+           <button id="unfollow" data-user-name= <%=@user.user_name %>
+           class="btn btn-default">Unfollow</button>
+       <%else%>
+           <button id="follow" data-user-name= <%=@user.user_name %>  class="btn btn-default">Follow</button>
+       <% end %>
+  <%end%>
