--- a/views/my_home.erb
+++ b/views/my_home.erb
@@ -26,41 +26,10 @@
         /*padding-top: 60px;*/
         background-color: skyblue;
       }
-
-    .tooltip {
-        display:none;
-        position:absolute;
-        border:1px solid #333;
-        background-color:#161616;
-        border-radius:5px;
-        padding:10px;
-        color:#fff;
-        font-size:12px Arial;
-      }
-
     </style>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>
-      $(document).ready(function(){
-        $("#ShowTweets").click(function(){
-          var url = "api/v1/users/" + document.getElementById("user_name").innerHTML + "/tweets";
-          //$("#TESTSECTION").empty().append("JQuery is working");
-          $.post(url, function(result){
-            var tweets = JSON.parse(result);
-            $("#tweet_feed").html("Your Tweets: <br>");
-            for(i = 0; i<tweets.length; i++){
-              t = tweets[tweets.length-i-1];
-              $("#tweet_feed").append(
-                "<div class='panel panel-deault'>\n<div class = 'panel panel-heading'>\n" +
-                 t.author_name + " tweeted at " + t.created_at + ":\n</div>" +
-                 "<div class='panel panel-body'>\n" + t.text +"\n</div>\n</div>\n<br>");
-               };
-          //  $("#tweet_feed").html(tweets[1].text);
-        });
-    });
-  });
-</script>
+    <script src="js/show_pfeed.js" type="text/javascript"></script>
 
   </head>
   <body>
@@ -72,58 +41,13 @@
 <!-- Begin page-->
 <div class="container">
   <div class="row" background-color>
-    <div class="col-md-4">
-      <div class="panel panel-default">
-        <div class="panel-body">
-      <h1> Hey <%= @user[:name] %> </h1>
-          <h3> User Info: </h3>
-          <ul>
-          <li> Username: <div id="user_name"><%= @user[:user_name]%></div></li>
-          <li> Email: <%= @user[:email]%> </li>
-          <li> Followers: <%= @user[:follower_count]%> </li>
-          <li> Follows: <%=@user[:following_count]%> </li>
-          <li> Number of tweets:<a id="ShowTweets"> <%=@user[:tweet_count]%> </a></li>
-        </ul>
-      </div>
-      </div>
-      </div>
-      <div class="col-md-6">
-        <form action="/tweet/new/submit" method="POST">
-        <div class="form-group">
-             <label for="RoarInput">Roar!</label>
-             <textarea type=text class="form-control" name= "tweet_text" id="Tweet_input" rows="3"></textarea>
-        </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <div id = "tweet_feed">
-      Tweets by People you Follow:
-      <br>
-      <% @tweets.each do |t| %> 
-      <% tweet = JSON.parse(t) %>   
-          <div class="panel panel-default">
-            <div class="panel panel-heading">
-              <%=tweet["author_name"]%> tweeted at <%=tweet["created_at"]%> :
-            </div>
-            <div class ="panel panel-body">
-              <%= tweet["text"]%>
-            </div>
-             <div class="panel panel-footer" id="footer">
-            <a style="padding-left:5px;"href='javascript:;' class='heart' title='like' data-tweet-id= <%=tweet["id"]%> >
-                <i  class="fa fa-heart"> </i>
-                <p class="heart2" data-tweet-likes= <%= tweet["likes"] %>> <%= tweet["likes"] %></p> 
-            </a> 
-            
-            <a style="padding-right:5px;" href='javascript:;' class='reply' title='reply' data-tweet-id= <%=tweet["id"]%> > 
-            <i  class="fa fa-reply"></i>
-            </a> 
-
-
-        
-            </div> 
-          </div>
+      <%= erb :user_info %>
+      <%= erb :write_tweet%>
+      <div class= "col-md-6" id = "tweet_feed">
+          
+          Tweets by People <%= @user[:name] %> Follows:
           <br>
-        <%end%>
-      </div>
+          <%= erb :feed %>
       </div>
     </div>
   </div>
