--- a/views/profile.erb
+++ b/views/profile.erb
@@ -24,89 +24,30 @@
       }
     </style>
   </head>
-  <script>
-    function followUser( form ){
-      var new_action = document.getElementById("user_name").innerHTML+"/follow";
-      form.action = new_action;
-    }
-    function unfollowUser( form ){
-      var new_action = document.getElementById("user_name").innerHTML+"/unfollow";
-      form.action = new_action;
-    }
-  </script>
-  <body>
+ <body>
   <script src="http://code.jquery.com/jquery-latest.min.js"> 
   </script>
 
     <%= erb :navbar %>
     <div class="container">
       <div class="row" background-color>
-        <div class="col-md-4">
-          <div class="panel panel-default">
-            <div class="panel-body">
-          <h1> Hey <%= @user[:name] %> </h1>
-              <h3> User Info: </h3>
-              <ul>
-              <li> Username:<div id="user_name"> <%= @user[:user_name]%></div></li>
-              <li> Email: <%= @user[:email]%> </li>
-              <li> Followers: <%= @user[:follower_count]%> </li>
-              <li> Follows: <%=@user[:following_count]%> </li>
-              <li> Number of tweets: <%=@user[:tweet_count]%> </li>
-            </ul>
-            <% if session[:user_id] && @user.id != session[:user_id]%>
-              <%if @follow_status %>
-                <form onsubmit="unfollowUser(this);" method="POST" name="unfollow-form">
-                  <button type="submit" class="btn btn-default">Unfollow</button>
-                </form>
-              <%else%>
-                <form onsubmit="followUser(this);" method="POST" name="follow-form">
-                  <button type="submit" class="btn btn-default">Follow</button>
-                </form>
-              <% end %>
-            <%end%>
-          </div>
-          </div>
-          </div>
-
+        <%= erb :user_info %>
+        <%= erb :follow_button %> 
+        <%= erb :write_tweet%>
           <div class= "col-md-6">
+
             <%=@user[:user_name]%>'s Tweets
             <br>
-          <% @tweets.each do |t| %>
-          <% tweet = JSON.parse(t) %>
-              <div class="panel panel-default">
-                <div class="panel panel-heading">
-                  <%=tweet["author_name"]%> tweeted at <%=tweet["created_at"]%> :
-                </div>
-                <div class ="panel panel-body">
-                  <%= tweet["text"]%>
-                </div>
-                <div class="panel panel-footer" id="footer" data-tweet-id= <%=tweet["id"]%>>
-                  <a style="padding-left:5px;"href='javascript:;' class='heart' title='like' data-tweet-id= <%=tweet["id"]%> >
-                      <i  class="fa fa-heart"> </i>
-                      <p class="heart2" data-tweet-likes= <%= tweet["likes"] %>> <%= tweet["likes"] %></p> 
-                  </a> 
-            
-                    <a style="padding-right:5px;" href='javascript:;' class='reply' title='reply' data-tweet-id= <%=tweet["id"]%> > 
-                      <i  class="fa fa-reply"></i>
-                    </a> 
-
-
-        
-              </div> 
-              </div>
-              <br>
-            <%end%>
+          <%= erb :feed %>
           </div>
         </div>
       </div>
-      <form action="/tweet/new/submit" method="POST">
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
 
+<script src="/js/follows.js" type="text/javascript"></script>
 
-<script src="js/liking.js" type="text/javascript"></script>
+<script src="/js/liking.js" type="text/javascript"></script>
 
-<script src="js/replying.js" type="text/javascript"></script>
+<script src="/js/replying.js" type="text/javascript"></script>
 
 
 
