--- a/views/login.erb
+++ b/views/login.erb
@@ -18,63 +18,53 @@
     <![endif]-->
     <style>
       body {
-        padding-top: 60px;
-        background-color: skyblue;
+          background-color: skyblue;
       }
       h1 {
         color: white;
         padding-bottom: 30px;
       }
-      button {
-        margin-top: 20px;
-        margin-bottom: 20px
-        margin-left: 20%;
-      }
-      a{
-        margin-top: 30px;
-        margin-left: 20%;
-      }
-      label{
-        margin-left: 35%;
-      }
+    
 
 
     </style>
   </head>
   <body>
-
     <div class="row">
-      <div class= "col-md-6 col-md-offset-3"
-      <div class: "page-header">
-        <h1> Login </h1>
+      <div class= "col-md-6 col-md-offset-3">
+        <div class= "page-header">
+          <h1> Login </h1>
+        </div>
       </div>
-    </div>
-      <div class="col-md-6 col-md-offset-3">
-
-    <form action="login/submit" method="POST">
-     <div class="form-group">
-       <label for="email">Email address:</label>
-       <input type="email" name="email" class="form-control" id="user[email]">
-     </div>
-     <div class="form-group">
-       <label for="pwd">Password:</label>
-       <input type="password" name="password" class="form-control" id="pwd">
-     </div>
+      <div class="col-md-4 col-md-offset-4">
+        <form action="login/submit" method="POST">
+          <div class="form-group">
+            <label for="email">Email address:</label>
+            <input type="email" name="email" class="form-control" id="user[email]">
+          </div>
+          <div class="form-group">
+            <label for="pwd">Password:</label>
+            <input type="password" name="password" class="form-control" id="pwd">
+          </div>
      <!--This currently doesn't do anything, so I commented it out
      <div class="checkbox">
        <label><input type="checkbox"> Remember me</label>
      </div>-->
       <!-- <input type="submit" value="submit"/>-->
-      <div class="col-md-4 col-md-offset-4">
-        <button type="submit" class="btn btn-default">Submit</button>
+          <div class="col-md-4 col-md-offset-4">
+            <button type="submit" class="btn btn-default"  margin-top: 20px;
+              margin-bottom: 20px;
+              margin-left: 20%;>Submit</button>
+          </div>
+        </form>
       </div>
-    </form>
-
-    <div class= "col-md-4 col-md-offset-3">
-        <a class="btn btn-primary" href="/registration" role="button">Create Account</a>
     </div>
-
+    <br>
+  <div class="row">
+    <div class= "col-md-1 col-md-offset-5">
+      <a class="btn btn-primary" href="/registration" role="button">Create Account</a>
     </div>
+  </div>
 
 
 
