--- a/views/my_home.erb
+++ b/views/my_home.erb
@@ -1,71 +1,16 @@
-<!DOCTYPE HTML>
-<html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<% content_for :head do %>
+  <title><%=@user.user_name%>'s Homepage</title>
+<% end %>
 
-    <!-- <script src= "../public/js/tweet_events.js">  </script>  why doesn't this work?-->
-
-    <title>nanoTwitter Home</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"> <!-- This is to enable icons -->
-
-    <!-- Bootstrap -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <style>
-      body {
-        /*padding-top: 60px;*/
-        background-color: skyblue;
-      }
-    </style>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="js/show_pfeed.js" type="text/javascript"></script>
-
-  </head>
-  <body>
-  <script src="http://code.jquery.com/jquery-latest.min.js"> 
-  </script>
-  
-     <%= erb :navbar %>
-
-<!-- Begin page-->
 <div class="container">
   <div class="row" background-color>
       <%= erb :user_info %>
       <%= erb :write_tweet%>
       <div class= "col-md-6" id = "tweet_feed">
-          
+
           Tweets by People <%= @user[:name] %> Follows:
           <br>
           <%= erb :feed %>
       </div>
     </div>
   </div>
-
- <script src="js/liking.js" type="text/javascript"></script>
-
- <script src="js/replying.js" type="text/javascript"></script>
-
-   
-
-<script scr="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/jquery-1.7.1.min.js"><\/script>')</script>
-
-
-  
-
-<!--Bootstrap jQuery Plugins, compiled and minified -->
-    <script src="/js/bootstrap.min.js"></script>
-
-</body>
-</html>
