--- a/views/registration.erb
+++ b/views/registration.erb
@@ -1,66 +1,45 @@
-git<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Create an Account</title>
+<% content_for :head do %>
+  <title>Create an Account!</title>
+<% end %>
 
-    <!-- Bootstrap -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <style>
-      body {
-        padding-top: 60px;
-        background-color: skyblue;
-      }
-    </style>
-  </head>
-  <body>
     <div class="row">
-      <div class= "col-md-6 col-md-offset-5"
-      <div class: "page-header">
-        <h1> Registration </h1>
+      <div class= "col-md-6 col-md-offset-3">
+        <div class= "page-header">
+          <h1> Registration </h1>
+        </div>
       </div>
     </div>
+    <div class = "row">
       <div class="col-md-6 col-md-offset-3">
 
-    <form action="registration/submit" method="POST">
-      <div class="form-group">
-        <label for="name"> Your Real Name: </label>
-        <input type="text" name="name" class="form-control" id="name">
-      </div>
-     <div class="form-group">
-       <label for="email">Email address:</label>
-       <input type="email" name="email" class="form-control" id="user[email]">
-     </div>
-     <div class="form-group">
-       <label for="user_name"> Username: </label>
-       <input type="text" name="user_name" class="form-control" id="user_name">
-     </div>
-     <div class="form-group">
-       <label for="pwd">Password:</label>
-       <input type="password" name="password" class="form-control" id="pwd">
-     </div>
-     <div class="form-group">
-       <label for="confirm_pwd"> Confirm password:</label>
-       <input type="password" class="form-control" id="pwrdconf">
-     </div>
-      <!-- <input type="submit" value="submit"/>-->
-     <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-    </div>
+        <form action="registration/submit" method="POST">
+          <div class="form-group">
+            <label for="name"> Your Real Name: </label>
+            <input type="text" name="name" class="form-control" id="name">
+          </div>
+          <div class="form-group">
+            <label for="email">Email address:</label>
+            <input type="email" name="email" class="form-control" id="user[email]">
+          </div>
+          <div class="form-group">
+            <label for="user_name"> Username: </label>
+            <input type="text" name="user_name" class="form-control" id="user_name">
+          </div>
+          <div class="form-group">
+            <label for="pwd">Password:</label>
+            <input type="password" name="password" class="form-control" id="pwd">
+          </div>
+          <div class="form-group">
+            <label for="confirm_pwd"> Confirm password:</label>
+            <input type="password" class="form-control" id="pwrdconf">
+          </div>
+          <!-- <input type="submit" value="submit"/>-->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+          <div class="col-md-4 col-md-offset-4">
+            <button type="submit" class="btn btn-default"  margin-top: 20px;
+              margin-bottom: 20px;
+              margin-left: 20%;>Submit</button>
+          </div>
+        </form>
+    </div>
+  </div>
