--- a/views/user_info.erb
+++ b/views/user_info.erb
@@ -1,12 +1,31 @@
+<script>
+      $(document).ready(function(){
+        $("#ShowTweets").click(function(){
+          var url = "api/v1/users/" + document.getElementById("user_name").innerHTML + "/tweets";
+          //$("#TESTSECTION").empty().append("JQuery is working");
+          $.get(url, function(result){
+            var tweets = JSON.parse(result);
+            $("#tweet_feed").html("Your Tweets: <br>");
+            for(i = 0; i<tweets.length; i++){
+              t = tweets[tweets.length-i-1];
+              $("#tweet_feed").append(
+                "<div class='panel panel-deault'>\n<div class = 'panel panel-heading'>\n" +
+                 t.author_name + " tweeted at " + t.created_at + ":\n</div>" +
+                 "<div class='panel panel-body'>\n" + t.text +"\n</div>\n</div>\n<br>");
+               };
+        });
+    });
+  });
+</script>
+
 <div class="col-md-4">
     <div class="panel panel-default">
        <div class="panel-body">
-          <h1> Hey <%= @user[:name] %> </h1>
+          <h1 style="color:black"> Hey <%= @user[:name] %> </h1>
           <h3> User Info: </h3>
           <ul>
             <li> Username: <div id="user_name"><%= @user[:user_name]%></div>
             </li>
-            <li> Email: <%= @user[:email]%> </li>
             <li> Followers: <%= @user[:follower_count]%> </li>
             <li> Follows: <%=@user[:following_count]%> </li>
             <li> Number of tweets:<a id="ShowTweets"> <%=@user[:tweet_count]%> </a>
