redis operations fix to make tweets cache properly, homepage display fix

--- a/views/home.erb
+++ b/views/home.erb
@@ -8,7 +8,7 @@
             <h1>Recent Tweets</h1>
             <br>
           <% @tweets.each do |tweet| %>
-            <% tweet = JSON.parse(tweet) %>
+            <% tweet = JSON.parse(tweet[0]) %>
               <div class="panel panel-default">
                 <div class="panel panel-heading">
                   <a href = <%="/user/"+ tweet["author_name"]%>><%=tweet["author_name"]%></a> tweeted at <%=tweet["created_at"]%> :
