--- a/views/home.erb
+++ b/views/home.erb
@@ -6,18 +6,7 @@
    <div class="row" background-color>
     <div class= "col-md-6 col-md-offset-3" >
             <h1>Recent Tweets</h1>
-            <br>
-          <% @tweets.each do |tweet| %>
-              <div class="panel panel-default">
-                <div class="panel panel-heading">
-                  <a href = <%="/user/"+ tweet["author_name"]%>><%=tweet["author_name"]%></a> tweeted at <%=tweet["created_at"]%> :
-                </div>
-                <div class ="panel panel-body">
-                  <%= tweet["text"]%>
-                </div>
-              </div>
-              <br>
-            <%end%>
+         <%= erb :feed %>
           </div>
         </div>
       </div>
