--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,5 +1,5 @@
 <% content_for :head do %>
-  <title><%=@user_name %>'s Profile</title>
+  <title><%=@user[:user_name] %>'s Profile</title>
 <% end %>
 
     <div class="container">
@@ -8,7 +8,7 @@
         <%= erb :follow_button %>
           <div class= "col-md-6">
 
-            <%=@user_name %>'s Tweets
+           <h3> <%=@user[:user_name] %>'s Tweets: </h3>
             <br>
             <%= erb :feed %>
 
