--- a/views/layout.erb
+++ b/views/layout.erb
@@ -33,14 +33,14 @@
   <body>
     <%= erb :navbar %>
     <%= yield %>
-    <script src="/js/follows.js" type="text/javascript"></script>
-
-    <script src="/js/liking.js" type="text/javascript"></script>
-
-    <script src="/js/replying.js" type="text/javascript"></script>
-    <!-- jQuery via Google + local fallback -->
+    <!-- jQuery via Google + local fallback --> 
+    <script src="/js/replies.js"></script>
+    <script src= "/js/likes.js"></script>
+    
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.7.1.min.js"><\/script>')</script>
+
+
 
     <!--Bootstrap jQuery Plugins, compiled and minified -->
     <script src="/js/bootstrap.min.js"></script>
