changes before video for pito, all functionality seems complete

--- a/views/error.erb
+++ b/views/error.erb
@@ -2,5 +2,6 @@
   <title>Oops!</title>
 <% end %>
 
-    Hello, there has been an error. While this page would normally tell you what that error was, that function has not yet been implemented.
-    We appreciate your patience.
+    Error page
+
+   
