--- a/views/tag.erb
+++ b/views/tag.erb
@@ -1,137 +1,11 @@
-<!DOCTYPE HTML>
-<html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-
-    <title>nanoTwitter tag</title>
-
-    <!-- Bootstrap -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-     <style>
-      body {
-        background-color: skyblue;
-      }
-      h1 {
-        text-align: center;
-        color: white;
-        font-weight: bold;
-      }
-    </style>
-
-
-  </head>
-  <body>
-  <script src="http://code.jquery.com/jquery-latest.min.js">
-  </script>
-
-
-
-
-  <div class="container">
-   <div class="row" background-color>
-    <div class= "col-md-6 col-md-offset-3" >
-            <h1><%= @tag_name %></h1>
-            <br>
-          <% @tweets.each do |tweet| %>
-          <% tweet = JSON.parse(t) %>
-              <div class="panel panel-default">
-                <div class="panel panel-heading">
-                  <%=tweet["author_name"]%> tweeted at <%=tweet["created_at"]%> :
-                </div>
-                <div class ="panel panel-body">
-                  <%= tweet["text"]%>
-                </div>
-                <div class="panel panel-footer">
-            <a style="padding-left:5px;"href='javascript:;' class='heart' title='like' data-tweet-id= <%=tweet["id"]%> >
-                <i  class="fa fa-heart"> </i>
-                <p class="heart2" data-tweet-likes= <%= tweet["likes"] %>> <%= tweet["likes"] %></p>
-            </a>
-
-            <a style="padding-right:5px;" href='javascript:;' class='reply' title='reply' data-tweet-id= <%=tweet["id"]%> >
-            <i  class="fa fa-reply"></i>
-            </a>
-
-
-
-            </div>
-              </div>
-              <br>
-            <%end%>
-          </div>
+<% content_for :head do %>
+  <title> #<%=@tag%> </title>
+<% end %> 
+ <div class="container">
+     <div class="row" background-color>
+        <div class= "col-md-6 col-md-offset-3" >
+            <strong> <h1> #<%=@tag %> </h1> </strong><br>
+                <%= erb :feed %>
         </div>
-      </div>
-
-
-<script>
-
-
-          $('a.heart').click(function(){
-              $.ajax({
-              url: "/tweet/like",
-              type: "POST",
-              data: {tweet_id: $('.heart').attr('data-tweet-id')},
-              success: function(){
-                        var likes = $('.heart2').attr('data-tweet-likes')
-                        var likes = parseInt(likes) + 1
-                        $('.heart2').text(likes.toString())
-                      }
-
-             })
-          })
-
-
-            $('a.reply').click(function(){
-
-
-
-              $.ajax({
-              url: "/tweet/reply",
-              type: "POST",
-              data: {tweet_id: $('.reply').attr('data-tweet-id')},
-              success: function(data){
-
-                        debugger
-
-                       }
-             })
-          })
-
-
-
-
-
-
-          // $('a.heart').hover(function(){
-          //     var title = $(this).attr('title')
-          //     $(this).data('tipText', title).removeAttr('title');
-          //     $('<p class="tooltip"></p>')
-          //     .text(title)
-          //     .appendTo('body')
-          //     .fadeIn('slow');
-
-          // })
-
-</script>
-
-<!-- jQuery via Google + local fallback -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/jquery-1.7.1.min.js"><\/script>')</script>
-
-<!--Bootstrap jQuery Plugins, compiled and minified -->
-<script src="/js/bootstrap.min.js"></script>
-
-
-</body>
-</html>
+     </div>
+ </div>
