--- a/views/login.erb
+++ b/views/login.erb
@@ -1,68 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <style>
-      body {
-          background-color: skyblue;
-      }
-      h1 {
-        color: white;
-        padding-bottom: 30px;
-      }
-
-
-
-    </style>
-  </head>
-  <body>
     <div class="row">
-      <div class= "col-md-6 col-md-offset-3">
-        <div class= "page-header">
-          <h1> Login </h1>
+        <div class= "col-md-6 col-md-offset-3">
+            <div class= "page-header">
+              <h1> Login </h1>
+            </div>
         </div>
+        <div class="col-md-4 col-md-offset-4">
+            <form action="login/submit" method="POST">
+                  <div class="form-group">
+                      <label for="email">Email address:</label>
+                      <input type="email" name="email" class="form-control" id="user[email]">
+                  </div>
+                  <div class="form-group">
+                      <label for="pwd">Password:</label>
+                      <input type="password" name="password" class="form-control" id="pwd">
+                  </div>
+                  <div class="col-md-4 col-md-offset-4">
+                      <button type="submit" class="btn btn-default"  margin-top: 20px;
+                          margin-bottom: 20px;
+                          margin-left: 20%;>Submit
+                      </button>
+                  </div>
+            </form>
+         </div>
+  </div>
+  <br>
+
+  <div class="row" style="padding-left:31px;">
+      <%=session[:error]%>
+      <div class= "col-md-1 col-md-offset-5">
+          <a  style="padding-right:5px" class="btn btn-primary" href="/registration" role="button">Create Account</a>
       </div>
-      <div class="col-md-4 col-md-offset-4">
-        <form action="login/submit" method="POST">
-          <div class="form-group">
-            <label for="email">Email address:</label>
-            <input type="email" name="email" class="form-control" id="user[email]">
-          </div>
-          <div class="form-group">
-            <label for="pwd">Password:</label>
-            <input type="password" name="password" class="form-control" id="pwd">
-          </div>
-          <div class="col-md-4 col-md-offset-4">
-            <button type="submit" class="btn btn-default"  margin-top: 20px;
-              margin-bottom: 20px;
-              margin-left: 20%;>Submit</button>
-          </div>
-        </form>
-      </div>
-    </div>
-    <br>
-  <div class="row">
-    <%=session[:error]%>
-    <div class= "col-md-1 col-md-offset-5">
-      <a class="btn btn-primary" href="/registration" role="button">Create Account</a>
-    </div>
   </div>
 
-
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
