--- a/views/navbar.erb
+++ b/views/navbar.erb
@@ -1,40 +1,41 @@
 <nav class="navbar navbar-default">
-<div class="container-fluid">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="/front">ThunderBear</a>
-  </div>
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-      <li><a href="/">
-         <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-      </a></li>
-    </ul>
-    <form class="navbar-form navbar-left" action="/search" method="GET">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                          <span class="sr-only">Toggle navigation</span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/front">ThunderBear</a>
+            </div>
+              <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav">
+                        <li><a href="/">
+                           <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                        </a></li>
+                  </ul>
+                  <form class="navbar-form navbar-left" action="/search" method="GET">
 
-      <div class="form-group">
-        <input type="text" class="form-control" name="keyword" placeholder="search for tweets">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-    <form class="nav navbar-form navbar-right" method=>
-      <%if authenticate!%>
-        <a class="btn btn-primary" href="/tweet/new">Roar</a>
-        <a class="btn btn-primary" href="/logout">Logout</a>
-        <%else%>
-      <a class="btn btn-primary" href="/login">Login</a>
-      or
-      <a class="btn btn-primary" href="/registration"> Create an Account</a>
-      <%end%>
+                      <div class="form-group">
+                           <input type="text" class="form-control" name="keyword" placeholder="search for tweets">
+                      </div>
+                      <button type="submit" class="btn btn-default">Submit</button>
+                  </form>
+                  <form class="nav navbar-form navbar-right" method=>
+                       <%if authenticate!%>
+                           <a class="btn btn-primary" href="/">Home</a>
+                           <a class="btn btn-primary" href=<%= "/user/"+ session[:user_name] %>> Profile </a>
+                           <a class="btn btn-primary" href="/logout">Logout</a>
+                       <%else%>
+                           <a class="btn btn-primary" href="/login">Login</a>
+                        
+                           <a class="btn btn-primary" href="/registration"> Create an Account</a>
+                      <%end%>
 
-    </form>
-  </div><!-- /.navbar-collapse -->
-</div><!-- /.container-fluid -->
+                </form>
+          </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
 </nav>
