--- a/views/registration.erb
+++ b/views/registration.erb
@@ -2,44 +2,45 @@
   <title>Create an Account!</title>
 <% end %>
 
-    <div class="row">
+<div class="row">
       <div class= "col-md-6 col-md-offset-3">
-        <div class= "page-header">
-          <h1> Registration </h1>
-        </div>
+            <div class= "page-header">
+                 <h1> Registration </h1>
+            </div>
       </div>
-    </div>
-    <div class = "row">
+</div>
+<div class = "row">
       <div class="col-md-6 col-md-offset-3">
 
-        <form action="registration/submit" method="POST">
-          <div class="form-group">
-            <label for="name"> Your Real Name: </label>
-            <input type="text" name="name" class="form-control" id="name">
-          </div>
-          <div class="form-group">
-            <label for="email">Email address:</label>
-            <input type="email" name="email" class="form-control" id="user[email]">
-          </div>
-          <div class="form-group">
-            <label for="user_name"> Username: </label>
-            <input type="text" name="user_name" class="form-control" id="user_name">
-          </div>
-          <div class="form-group">
-            <label for="pwd">Password:</label>
-            <input type="password" name="password" class="form-control" id="pwd">
-          </div>
-          <div class="form-group">
-            <label for="confirm_pwd"> Confirm password:</label>
-            <input type="password" class="form-control" id="pwrdconf">
-          </div>
-          <!-- <input type="submit" value="submit"/>-->
+           <form action="registration/submit" method="POST">
+                 <div class="form-group">
+                       <label for="name"> Your Real Name: </label>
+                       <input type="text" name="name" class="form-control" id="name">
+                 </div>
+                 <div class="form-group">
+                        <label for="email">Email address:</label>
+                        <input type="email" name="email" class="form-control" id="user[email]">
+                 </div>
+                 <div class="form-group">
+                        <label for="user_name"> Username: </label>
+                        <input type="text" name="user_name" class="form-control" id="user_name">
+                </div>
+                <div class="form-group">
+                        <label for="pwd">Password:</label>
+                        <input type="password" name="password" class="form-control" id="pwd">
+                </div>
+                <div class="form-group">
+                        <label for="confirm_pwd"> Confirm password:</label>
+                        <input type="password" class="form-control" id="pwrdconf">
+                </div>
+        <!-- <input type="submit" value="submit"/>-->
 
-          <div class="col-md-4 col-md-offset-4">
-            <button type="submit" class="btn btn-default"  margin-top: 20px;
-              margin-bottom: 20px;
-              margin-left: 20%;>Submit</button>
-          </div>
-        </form>
+               <div class="col-md-4 col-md-offset-4">
+                      <button type="submit" class="btn btn-default"  margin-top: 20px;
+                            margin-bottom: 20px;
+                            margin-left: 20%;>Submit
+                      </button>
+              </div>
+         </form>
     </div>
-  </div>
+</div>
